--- a/index.html
+++ b/index.html
@@ -9,20 +9,43 @@
 </head>
 
 <body>
-
   <h1 class="list">To Do List</h1>
 
-  <div class="to-do">Breakfast</div>
+  <br>
 
-  <div class="to-do">Work</div>
+  <div class="sublist">
+    Breakfast
+  </div>
 
-  <div class="to-do">Lunch</div>
+  <hr>
 
-  <div class="to-do">Read</div>
+  <div class="sublist">
+    Work
+  </div>
 
-  <div class="to-do">Go to SuperMarket</div>
+  <hr>
 
-  <div class="to-do">Call the Boss</div>
+  <div class="sublist">
+    Lunch
+  </div>
+
+  <hr>
+
+  <div class="sublist">
+    Read
+  </div>
+
+  <hr>
+
+  <div class="sublist">
+    Go to SuperMarket
+  </div>
+  
+  <hr>
+  
+  <div class="sublist">
+    Call the Boss
+  </div>
 
 </body>
 
