add: button and improvment

--- a/index.html
+++ b/index.html
@@ -18,35 +18,69 @@
     Breakfast
   </div>
 
+  <form class="my-button" action="">
+    <input type="radio">
+  </form>
+
+  <br>
   <hr>
+  <br>
 
   <div class="sublist">
     Work
   </div>
 
+  <form class="my-button" action="">
+    <input type="radio">
+  </form>
+
+  <br>
   <hr>
+  <br>
 
   <div class="sublist">
     Lunch
   </div>
 
+  <form class="my-button" action="">
+    <input type="radio">
+  </form>
+
+  <br>
   <hr>
+  <br>
 
   <div class="sublist">
     Read
   </div>
 
+  <form class="my-button" action="">
+    <input type="radio">
+  </form>
+
+  <br>
   <hr>
+  <br>
 
   <div class="sublist">
     Go to SuperMarket
   </div>
 
+  <form class="my-button" action="">
+    <input type="radio">
+  </form>
+
+  <br>
   <hr>
+  <br>
 
   <div class="sublist">
     Call the Boss
   </div>
+
+  <form class="my-button" action="">
+    <input type="radio">
+  </form>
 
 </body>
 
