add: menu, header and improvment code html and css

--- a/index.html
+++ b/index.html
@@ -10,77 +10,81 @@
 </head>
 
 <body>
-  <h1 class="list">To Do List</h1>
+  <header class="head">
+    <h1 class="list">To Do List</h1>
+  </header>
 
+  <div class="menu-list">
   <br>
+  <br>
+    <div class="sublist">
+      Breakfast
+    </div>
 
-  <div class="sublist">
-    Breakfast
+    <form class="my-button" action="">
+      <input type="radio">
+    </form>
+
+    <br>
+      <hr>
+    <br>
+
+    <div class="sublist">
+      Work
+    </div>
+
+    <form class="my-button" action="">
+      <input type="radio">
+    </form>
+
+    <br>
+    <hr>
+    <br>
+
+    <div class="sublist">
+      Lunch
+    </div>
+
+    <form class="my-button" action="">
+      <input type="radio">
+    </form>
+
+    <br>
+      <hr>
+    <br>
+
+    <div class="sublist">
+      Read
+    </div>
+
+    <form class="my-button" action="">
+      <input type="radio">
+    </form>
+
+    <br>
+    <hr>
+    <br>
+
+    <div class="sublist">
+      Go to SuperMarket
+    </div>
+
+    <form class="my-button" action="">
+      <input type="radio">
+    </form>
+
+    <br>
+    <hr>
+    <br>
+
+    <div class="sublist">
+      Call the Boss
+    </div>
+
+    <form class="my-button" action="">
+      <input type="radio">
+    </form>
   </div>
-
-  <form class="my-button" action="">
-    <input type="radio">
-  </form>
-
-  <br>
-  <hr>
-  <br>
-
-  <div class="sublist">
-    Work
-  </div>
-
-  <form class="my-button" action="">
-    <input type="radio">
-  </form>
-
-  <br>
-  <hr>
-  <br>
-
-  <div class="sublist">
-    Lunch
-  </div>
-
-  <form class="my-button" action="">
-    <input type="radio">
-  </form>
-
-  <br>
-  <hr>
-  <br>
-
-  <div class="sublist">
-    Read
-  </div>
-
-  <form class="my-button" action="">
-    <input type="radio">
-  </form>
-
-  <br>
-  <hr>
-  <br>
-
-  <div class="sublist">
-    Go to SuperMarket
-  </div>
-
-  <form class="my-button" action="">
-    <input type="radio">
-  </form>
-
-  <br>
-  <hr>
-  <br>
-
-  <div class="sublist">
-    Call the Boss
-  </div>
-
-  <form class="my-button" action="">
-    <input type="radio">
-  </form>
 
 </body>
 
